--- a/ImagePickerTest/Base.lproj/Main.storyboard
+++ b/ImagePickerTest/Base.lproj/Main.storyboard
@@ -17,11 +17,17 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NO8-da-f3v">
-                                <rect key="frame" x="199" y="264" width="46" height="30"/>
-                                <state key="normal" title="Button">
+                                <rect key="frame" x="154" y="355" width="67" height="30"/>
+                                <state key="normal" title="更换头像">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="changeAvata:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="gRr-dq-Vmt"/>
+                                </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="18.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="8ny-3j-byU">
+                                <rect key="frame" x="123" y="120" width="128" height="128"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -31,4 +37,7 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="18.jpg" width="1000" height="915"/>
+    </resources>
 </document>
